Improve connector styling and account for mask-related issues regarding cutting off strokes and browser-specific problems with rendering flat lines)

--- a/css/components/free-line.css
+++ b/css/components/free-line.css
@@ -20,6 +20,14 @@
   stroke-linecap: round;
 }
 
+wbfk-connector {
+  stroke: currentColor;
+  fill: currentColor;
+  stroke-width: 2.4;
+  stroke-linecap: round;
+  z-index: 1000;
+}
+
 .free-line--bullet-connector .free-line__line {
   stroke: var(--color-red);
 }
